# focus-dive-timer

./: .dockerignore  .env.example  .env.production  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Dockerfile  Dockerfile.webdev  LICENSE  README.md  docker-compose.yml  eslint.config.mjs  index.html  justfile  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  tsconfig.json  tsconfig.web-build.json  vite.config.ts
.github/workflows/: api-lint.yml  betterleaks-scan.yml  frontend-lint.yml
apps/api/: .dockerignore  .gitignore  Dockerfile  Dockerfile.dev  pyproject.toml
apps/api/src/focusdive_api/: conftest.py  extract-openapi.py  main.py
apps/api/src/focusdive_api/api/v1/: preferences.py  preferences_test.py  router.py  schemas.py  timer.py  timer_test.py  users.py  users_test.py
apps/api/src/focusdive_api/api/v1/integrations/: router.py
apps/api/src/focusdive_api/api/v1/integrations/slack/: router.py  router_test.py  schemas.py
apps/api/src/focusdive_api/core/: auth.py  http.py  jwt.py  mongo.py  redis.py  settings.py
apps/api/src/focusdive_api/emails/: config.py  deps.py  fastapi_mailer.py  interface.py
apps/api/src/focusdive_api/emails/templates/: login_code.html
apps/api/src/focusdive_api/services/slack/: client.py  schemas.py  service.py
apps/api/src/focusdive_api/testing/: fakes.py
apps/api/src/focusdive_api/timer/: schemas.py
apps/api/src/focusdive_api/users/: mongoengine.py  repo.py  utils_crypto.py
apps/api/src/focusdive_api/ws/: connections.py  router.py  timer.py  timer_service.py  timer_test.py
apps/extension/: README.md  index.html  manifest.chrome.json  manifest.firefox-dev.json  manifest.firefox.json  offscreen.html  package-lock.json  package-scripts.md  package.json  tailwind.config.ts  vite.config.ts
apps/web/: Dockerfile  components.json  index.html  package.json  tailwind.config.ts  vite.config.ts
production/: Dockerfile
public/: manifest.json
src/: App.tsx  index.css  main.tsx  vite-env.d.ts
src/components/: Footer.tsx  IntegrationsInfoDialog.tsx  Navigation.tsx  (+12 more)
(+198 files in other folders)
