[project]
name = "api"
version = "1.0.4"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi-mail>=1.6.1",
    "fastapi[standard]>=0.128.5",
    "httpx>=0.28.1",
    "mongoengine==0.29.1",
    "python-jose[cryptography]>=3.5.0",
    "redis>=7.1.1",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "ipython>=9.10.0",
    "pytest>=9.0.2",
    "ruff>=0.15.0",
]
