[project]
name = "api"
version = "1.0.4"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi-mail>=1.6.1",
    "fastapi[standard]>=0.128.5",
    "httpx>=0.28.1",
    "mongoengine==0.29.1",
    "python-jose[cryptography]>=3.5.0",
    "redis>=7.1.1",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "ipython>=9.10.0",
    "pytest>=9.0.2",
    "ruff>=0.15.0",
]

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "W",   # pycodestyle warnings
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "C4",  # flake8-comprehensions
]
ignore = [
    "E501",  # line too long (let formatter handle it)
    "B008",  # FastAPI Depends() in defaults is idiomatic
    "N999",  # extract-openapi is a script, not a module
]

[tool.ruff.lint.isort]
known-first-party = ["focusdive_api"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
